--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         />
         <br />
         <input
-          type="submit"
+          type="button"
           name="submit"
           value="Create Toy"
           class="submit"
